# DS_Intership

./: .gitignore  Advanced modeling.ipynb  Data preprocessing with Dask framework.ipynb  Data preprocessing.ipynb  EDA.ipynb  ETL-and-DQC.ipynb  README.md  Validataion schema.ipynb  dcq.ipynb  distribution_map.html  poetry.toml  pyproject.toml  requirements.txt  setup.py  tets pathlib.ipynb
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: Advanced modeling-checkpoint.ipynb  Data preprocessing-checkpoint.ipynb  EDA-checkpoint.ipynb  ETL-and-DQC-checkpoint.ipynb  Validataion schema-checkpoint.ipynb  dcq-checkpoint.ipynb  tets pathlib-checkpoint.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
notebooks/: Advanced modeling.ipynb  Data preprocessing.ipynb  ETL-and-DQC.ipynb
src/yarmmaxds/: Advanced_modeling.py  Validation_schema.py
yarmmaxds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
