[tool.poetry]
name = "yarmmaxdstest"
version = "0.2.3"
description = ""
authors = ["Max <maxim_yarmaluk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
pathlib = "^1.0.1"
permetrics = "^1.5.0"
seaborn = "^0.13.0"
sklearn = "^0.0.post11"
datetime = "^5.2"
scikit-learn = "^1.3.2"
lightgbm = "^4.1.0"
xgboost = "^2.0.1"
boruta = "^0.3"
catboost = "^1.2.2"
optuna = "^3.4.0"
shap = "^0.43.0"
hyperopt = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
