[tool.poetry]
name = "yarmmaxds"
version = "0.1.9"
description = ""
authors = ["Max <maxim_yarmaluk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = '>3.8, <4'
setuptools = "*"
permetrics = "*"
seaborn = "*"
scikit-learn = "*"
lightgbm = "*"
xgboost = "*"
boruta = "*"
catboost = "*"
optuna = "*"
shap = "*"
hyperopt = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
